--- a/css/feedback.css
+++ b/css/feedback.css
@@ -15,6 +15,27 @@ h1 {
   font-size: 60px;
   font-style: normal;
 }
+h2 {
+  text-align: center;
+  margin-bottom: 0.8em;
+  font-size: 3.2em;
+  font-family: "Outfit", serif;
+  font-weight: bold;
+}
+
+.paragraph {
+  text-align: center;
+  font-family: "Outfit", serif;
+  font-size: 1.5em;
+  display: block;
+  margin-bottom: 1em;
+}
+
+.paragraph2 {
+  text-align: center;
+  font-size: 1.5em;
+  margin-top: 13em;
+}
 
 strong {
   font-weight: bold;
@@ -33,3 +54,32 @@ strong {
   font-weight: bold;
   margin-top: 40px;
 }
+
+input {
+margin: 2em;
+color: rgb(3, 2, 2);
+   font-size: 1.2em;
+   font-family: "Outfit", serif;
+   font-weight: 400;
+   border: none;
+   background-color: transparent;
+   margin-left: 25%;
+}
+
+
+button {
+  align-items: center;
+  display: inline-table;
+  margin-left: 40%;
+  width: 13em;
+  height: 3.0em;
+   color: rgb(3, 2, 2);
+   font-size: 1.2em;
+   font-family: "Outfit", serif;
+   font-weight: bold;
+   box-shadow: 0px 0px 4px 4px aqua;
+   border: none;
+   background-color: aqua;
+
+}
+
