--- a/css/result.css
+++ b/css/result.css
@@ -9,12 +9,26 @@ body {
   line-height: 1em;
 }
 
-h1 {
+h2 {
   font-family: "Outfit", serif;
   font-optical-sizing: auto;
-  font-size: 60px;
+  font-size: 50px;
   font-style: normal;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  
 }
+
+.paragraph {
+  font-size: 1.5em;
+  margin-bottom: 2em;
+  text-align: center;
+  font-family: "Outfit", serif;
+}
+
+  
+
 
 strong {
   font-weight: bold;
@@ -32,4 +46,21 @@ strong {
   font-size: 30px;
   font-weight: bold;
   margin-top: 40px;
+}
+
+button {
+  display: inline-table;
+  margin-left: 40%;
+  margin-top: 17em;
+  width: 13em;
+  height: 3.5em;
+    background-color: transparent;
+   color: white;
+   font-size: 1.2em;
+   font-family: "Outfit", serif;
+   font-weight: 600;
+   box-shadow: 0px 0px 4px 4px rgb(255, 255, 255);
+   border: none;
+   
+   
 }
