--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -1,36 +1,66 @@
 body {
-  font-family: "Inter", serif;
-  width: 80%;
-  margin: 0 auto;
-  background-image: url(../assets/bg.jpg);
-  background-size: cover;
-  color: white;
-  background-repeat: no-repeat;
-  line-height: 1em;
+    font-family: "Inter", serif;
+    width: 80%;
+    margin: 0 auto;
+    background-image: url(../assets/bg.jpg);
+    background-size: cover;
+    color: white;
+    background-repeat: no-repeat;
+    line-height: 1em;
 }
 
 h1 {
-  font-family: "Outfit", serif;
-  font-optical-sizing: auto;
-  font-size: 60px;
-  font-style: normal;
+    font-family: "Outfit", serif;
+    font-optical-sizing: auto;
+    font-size: 60px;
+    font-style: normal;
 }
 
 
 strong {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 #logo img {
-  width: 150px;
-  margin-top: 2em;
-  margin-bottom: 5em;
+    width: 150px;
+    margin-top: 2em;
+    margin-bottom: 5em;
 }
 
 #istruzioni {
-  color: #d20094;
-  font-family: "Outfit", serif;
-  font-size: 30px;
-  font-weight: bold;
-  margin-top: 40px;
+    color: #d20094;
+    font-family: "Outfit", serif;
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 40px;
+}
+
+#question {
+
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    margin: 30px;
+    width: 80%;
+
+}
+
+#answer {
+    padding-top: 50px;
+
+}
+
+#answer-1,
+#answer-2,
+#answer-3,
+#answer-4 {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    padding: 15px;
+    margin: 10px auto;
+    width: 70%;
+    border-radius: 20px;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    cursor: pointer;
 }
