--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -20,10 +20,19 @@ strong {
     font-weight: bold;
 }
 
-#logo img {
+/*#logo img {
     width: 150px;
     margin-top: 2em;
     margin-bottom: 5em;
+}*/
+#logo{
+  display: inline-block;
+}
+
+#logo img{
+  display: inline-block;
+  width: 150px;
+  margin-bottom: 150px;
 }
 
 #istruzioni {
@@ -70,3 +79,43 @@ strong {
     text-align: center;
     margin-bottom: 0.5em;
 }
+
+/*ANNA:Timer*/
+#contatore {
+  
+  display: inline-block;
+  margin-top: 40px;
+  position: relative;
+  height: 150px;
+ margin-left:850px;
+position: relative;
+  width: 15%; 
+  height: auto;
+  
+}
+
+canvas {
+  width: 100%; 
+  height: auto;}
+
+#timer {
+  
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+#contatore-testo {
+ 
+  font-family: "Inter", serif;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 10px;
+  color:white;
+text-align: center;
+line-height: 3em;}
+
+#contatore-numero{
+  font-size: 50px;
+}
+/*Fine Timer*/
