--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -25,14 +25,14 @@ strong {
     margin-top: 2em;
     margin-bottom: 5em;
 }*/
-#logo{
-  display: inline-block;
+#logo {
+    display: inline-block;
 }
 
-#logo img{
-  display: inline-block;
-  width: 150px;
-  margin-bottom: 150px;
+#logo img {
+    display: inline-block;
+    width: 150px;
+    margin-bottom: 150px;
 }
 
 #istruzioni {
@@ -75,15 +75,19 @@ strong {
     cursor: pointer;
     text-align: center;
 }
+
+
 #answer-1 {
     margin-right: 40px;
-    }
-    #answer-3{
-        margin-right: 40px;
-    }
-    #Contenitore-benchmark-question{
-        text-align: center;
-    }
+}
+
+#answer-3 {
+    margin-right: 40px;
+}
+
+#Contenitore-benchmark-question {
+    text-align: center;
+}
 
 .h2banch {
     font-family: "Outfit", serif;
@@ -94,40 +98,71 @@ strong {
 
 /*ANNA:Timer*/
 #contatore {
-  
-  display: inline-block;
-  margin-top: 40px;
-  position: relative;
-  height: 150px;
- margin-left:850px;
-position: relative;
-  width: 15%; 
-  height: auto;
-  
+
+    display: inline-block;
+    margin-top: 40px;
+    position: relative;
+    height: 150px;
+    margin-left: 850px;
+    position: relative;
+    width: 15%;
+    height: auto;
+
 }
 
 canvas {
-  width: 100%; 
-  height: auto;}
+    width: 100%;
+    height: auto;
+}
 
 #timer {
-  
-  font-size: 30px;
-  margin-bottom: 20px;
-}
-#contatore-testo {
- 
-  font-family: "Inter", serif;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 10px;
-  color:white;
-text-align: center;
-line-height: 3em;}
 
-#contatore-numero{
-  font-size: 50px;
+    font-size: 30px;
+    margin-bottom: 20px;
 }
+
+#contatore-testo {
+
+    font-family: "Inter", serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 10px;
+    color: white;
+    text-align: center;
+    line-height: 3em;
+}
+
+#contatore-numero {
+    font-size: 50px;
+}
+
 /*Fine Timer*/
+
+/*pulsante "Procedi" */
+
+#procedi {
+    font-size: 20px;
+    font-weight: bolder;
+    box-shadow: 0px -3px 0px 0px #FEFBFD;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    width: 200px;
+    height: 50px;
+    margin: 250px;
+    margin-left: 100px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#procedi:hover {
+    color: rgb(3, 2, 2);
+    box-shadow: 0px 0px 4px 4px aqua;
+    border: none;
+    background-color: aqua;
+    transform: scale(1.05);
+}
