--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -66,20 +66,5 @@ strong {
   font-size: 50px;
   text-align: center;
   margin-bottom: 0.5em;
-}
-
-/* Inizio div footer per count-question */
-
-#count-question {
-  text-align: center;
-  padding-top: 180px;
-  font-size: 18px;
-  font-family: inter;
-}
-
-.ten {
-  color: #900080;
-  font-size: 18px;
-  font-family: inter;
-  font-weight: bold;
+  line-height: 1.4em;
 }
