--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -157,3 +157,21 @@ canvas {
   background-color: aqua;
   transform: scale(1.05);
 }
+
+/* Inizio div footer per count-question */
+
+#count-question {
+  text-align: center;
+  padding-top: 180px;
+  font-size: 18px;
+  font-family: inter;
+}
+
+.ten {
+  color: #900080;
+  font-size: 18px;
+  font-family: inter;
+  font-weight: bold;
+}
+
+/* Fine div footer per count-question */
