--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -43,14 +43,14 @@ strong {
   margin-top: 40px;
 }
 
-#question {
+/*#question {
   color: white;
   font-size: 50px;
   font-weight: bold;
   text-align: center;
   margin: 30px;
   width: 80%;
-}
+}*/
 
 #answer {
   padding-top: 50px;
