--- a/css/feedback.css
+++ b/css/feedback.css
@@ -29,12 +29,14 @@ h2 {
   font-size: 1.5em;
   display: block;
   margin-bottom: 1em;
+ 
 }
 
 .paragraph2 {
   text-align: center;
   font-size: 1.5em;
-  margin-top: 13em;
+  margin-top: 4em;
+  font-family: "Outfit", serif;
 }
 
 strong {
@@ -57,14 +59,26 @@ strong {
 
 input {
 margin: 2em;
-color: rgb(3, 2, 2);
+color: rgb(250, 238, 238);
    font-size: 1.2em;
    font-family: "Outfit", serif;
    font-weight: 400;
    border: none;
    background-color: transparent;
    margin-left: 25%;
+   outline: none;
+   margin-bottom: 1%;
+   margin-left: 22%;
+   margin-top: 3em;
+
 }
+
+hr {
+  border:solid #900080 1.5px;
+  margin-top: 0;
+  width: 60%;
+border-width: 2.5px 0 0 0;
+  }
 
 
 button {
@@ -80,6 +94,7 @@ button {
    box-shadow: 0px 0px 4px 4px aqua;
    border: none;
    background-color: aqua;
+   margin-top: 2.8em;
 
 }
 
@@ -87,13 +102,16 @@ button {
   display: flex;
   justify-content: center;
   gap: 5px;
+  
 }
 .star {
-  font-size: 30px;
+  font-size: 70px;
   cursor: pointer;
-  color: #0B113B;
+  color: #00032c;
   transition: color 0.3s;
-}
+  margin-top: 0.8em;
+  }
+  
 .star.active, .star:hover {
   color: #00FFFF;
 }
