--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -85,11 +85,14 @@ strong {
   text-align: center;
 }
 
-.h2banch {
-  font-family: "Outfit", serif;
-  font-size: 50px;
+/*h2 per question*/
+h2 {
   text-align: center;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.8em;
+  font-size: 3.2em;
+  font-family: "Outfit", serif;
+  font-weight: bold;
+  line-height: 1em;
 }
 
 /*ANNA:Timer*/
@@ -162,9 +165,10 @@ canvas {
 
 #count-question {
   text-align: center;
-  padding-top: 180px;
+  padding-top: 80px;
   font-size: 18px;
   font-family: inter;
+  padding-bottom: 30px;
 }
 
 .ten {
