--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -89,7 +89,7 @@ strong {
 h2 {
   text-align: center;
   margin-bottom: 0.8em;
-  font-size: 3.2em;
+  font-size: 3.1em;
   font-family: "Outfit", serif;
   font-weight: bold;
   line-height: 1em;
@@ -163,12 +163,10 @@ canvas {
 
 /* Inizio div footer per count-question */
 
-#count-question {
-  text-align: center;
-  padding-top: 80px;
-  font-size: 18px;
-  font-family: inter;
-  padding-bottom: 30px;
+footer {
+  display: flex;
+  margin-top: 75px;
+  justify-content: center;
 }
 
 .ten {
