--- a/css/result.css
+++ b/css/result.css
@@ -6,7 +6,7 @@ body {
   background-size: cover;
   color: white;
   background-repeat: no-repeat;
-  line-height: 1em;
+  line-height: 1.5em;
 }
 
 h2 {
@@ -17,7 +17,6 @@ h2 {
   text-align: center;
   font-weight: bold;
   margin-bottom: 0.5em;
-  
 }
 
 .paragraph {
@@ -26,9 +25,6 @@ h2 {
   text-align: center;
   font-family: "Outfit", serif;
 }
-
-  
-
 
 strong {
   font-weight: bold;
@@ -53,35 +49,31 @@ button {
   margin-bottom: 8em;
   width: 13em;
   height: 3.5em;
-    background-color: transparent;
-   color: white;
-   font-size: 1.2em;
-   font-family: "Outfit", serif;
-   font-weight: 600;
-   box-shadow: 0px 0px 4px 4px rgb(255, 255, 255);
-   border: none;
-   
-   
+  background-color: transparent;
+  color: white;
+  font-size: 1.2em;
+  font-family: "Outfit", serif;
+  font-weight: 600;
+  box-shadow: 0px 0px 4px 4px rgb(255, 255, 255);
+  border: none;
+  cursor: pointer;
 }
-#myCanvas{
-  width: 400px;  
-  height: 400px; 
-  margin: 0 auto; 
-  
+#myCanvas {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
 }
 
-#contenitore-bottone-result{
+#contenitore-bottone-result {
   text-align: center;
 }
 
 #container-grafico {
-   display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 
   width: 100%;
-max-width: 900px;
+  max-width: 900px;
   margin: 0 auto;
-  
-} 
-
+}
