--- a/css/welcome.css
+++ b/css/welcome.css
@@ -57,6 +57,7 @@ strong {
   box-shadow: 0px 0px 18px 0px #00ffff;
   border: 1px #00ffff solid;
   font-size: 19px;
+  cursor: pointer;
 }
 
 input[type="checkbox"] {
