css-button+formbranch-Giulia

--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -140,7 +140,7 @@ canvas {
 #procedi {
   font-size: 20px;
   font-weight: bolder;
-  box-shadow: 0px -3px 0px 0px #fefbfd;
+  border: 2px #fefbfd solid;
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
   width: 200px;
