--- a/css/result.css
+++ b/css/result.css
@@ -111,3 +111,14 @@ button {
   font-size: 0.9em;
 
 }
+#paragrafo-centro4 {
+  position: absolute;
+  top: 58%;
+  left: 51%;
+  transform: translate(-50%, -50%);
+  font-size: 16px;
+  color: #ff12b8;
+  text-align: center;
+  font-size: 0.9em;
+
+}
