--- a/css/result.css
+++ b/css/result.css
@@ -76,8 +76,7 @@ button {
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
-  
-} 
+}
 #paragrafo-centro1 {
   position: absolute;
   top: 54%;
@@ -98,7 +97,6 @@ button {
   color: #c4c3d8;
   text-align: center;
   font-size: 0.7em;
-
 }
 #paragrafo-centro3 {
   position: absolute;
@@ -109,7 +107,6 @@ button {
   color: #03edf2;
   text-align: center;
   font-size: 0.9em;
-
 }
 #paragrafo-centro4 {
   position: absolute;
@@ -120,5 +117,20 @@ button {
   color: #ff12b8;
   text-align: center;
   font-size: 0.9em;
+}
 
+h3 {
+  font-family: "Outfit", serif;
+  font-optical-sizing: auto;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 0.5em;
+  line-height: 1.2em;
+}
+
+.likeH3 {
+  font-family: "Inter", serif;
+  color: #c4c3d8;
+  line-height: 1.1em;
+  font-size: 16px;
 }
